# packy

./: .gitignore  CHANGELOG.md  README.md  custom_uninstaller.spec  main.py  packy.spec  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  setup.py
custom_uninstaller/: main.py
i18n/: .gitignore  en-US.ts  fr-FR.ts  translations.txt
packy/: .gitignore  compile_ui.py  convert_ui_to_py.py  main.py  packy.py  packy_app.py
packy/core/: app_config.py  debug_logger.py  isettings_persistable.py  labeled_enum.py  settings.py  ui_strings.py
packy/model/: files_model.py  log.py  packer.py  packer_data.py  packer_factory.py  packer_signals.py  packer_type_data.py  preferences.py  progression.py  session.py  session_decoder.py  session_encoder.py  task.py  warnings.py  zip_packer.py
packy/models/: archiver_config_model.py  files_model.py  log.py  packer.py  packer_data.py  packer_factory.py  packer_signals.py  packer_type_data.py  packy_settings.py  progression.py  session.py  session_decoder.py  session_encoder.py  task.py  tasks_model.py  warnings.py  zip_packer.py
packy/ui/: about.ui  about_dialog.ui  main_window.ui  new_session.ui  options_dialog.ui  radio_group_binder.py
packy/utils/: assets_access.py  external_data_access.py  resources_access.py  settings_access.py
packy/view/: about.py  fix_warnings.py  main_window.py  options.py  tree_view_proxy_model.py
packy/views/: about.py  about_dialog.py  fix_warnings.py  main_window.py  messages_widget.py  options.py  options_dialog.py  tree_view_proxy_model.py
resources/: .gitignore  fix_warnings.ui  main_window.ui  options.ui  packer_info.json  packy.qrc
resources/json/: packer_info.json  session_save_sample.json  session_save_sample_new.json  session_save_schema.json  session_schema.json
resources/ui/: about.ui  fix_warnings.ui  main_window.ui
resources/yaml/: metadata.yml
scripts/: convert_ui_to_py.py  update_pyproject_file.py
src/: .gitignore  about.py  files_model.py  main.py  main_window.py  new_session.py  options.py  packer.py  packer_data.py  packer_type.py  packer_type_data.py  preferences.ini  preferences.py  session.py  session_decoder.py  session_encoder.py  task.py  task_encoder.py  test.json
src/model/: files_model.py  log.py  packer.py  packer_data.py  packer_factory.py  packer_signals.py  packer_worker.py  packer_worker_signals.py  preferences.py  progression.py  session.py  session_decoder.py  session_encoder.py  task.py  warnings.py  zip_packer.py
src/view/: about.py  fix_warnings.py  main_window.py  options.py
tests/: .gitignore  conftest.py  test_files_model.py  test_packer.py  test_zip_packer.py  utils_func.py
tests/data/files_model/: check_integrity.json  file_hierarchy.json  json_init.json  update_model.json
tests/data/input_session/: session_save.json
tests/data/packer/: clean_tmp_folder.json  copy_items_to_tmp_folder.json  file_hierarchy.json  filter_selected_files.json  find_snapshots.json  remove_snapshots.json  snapshot_retention.json  tmp_folder_path.json  zip_packer.json
tests/data/zip_packer/: file_hierarchy.json  pack_tmp_folder.json
