[build-system]

[project]
name = "PackY"
version = "0.9.0.0"
description = "PackY is a simple and intuitive software for creating batch file archives."
readme = "README.md"
license = "GPL-3.0"
requires-python = ">= 3.12.13"

[tool.distutils.build_exe]
includes = ["model", "view", "utils"]
excludes = ["tkinter", "unittest"]
include_files = ["resources"]