[build-system]

[project]
name = "PackY"
version = "0.9.0.0"
authors = [
  {name = "Marie-Neige Chapel", email = ""},
  {name = "Joseph Garnier", email = ""},
]
maintainers = [
  {name = "Marie-Neige Chapel", email = ""},
  {name = "Joseph Garnier", email = ""},
]
description = "PackY is a simple and intuitive software for creating batch file archives."
readme = "README.md"
license = "GPL-3.0"
license-files = ["LICENSE.md"]
keywords = ["pyside", "zip", "packager", "archive"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Topic :: Desktop Environment :: File Managers",
  "Programming Language :: Python :: 3.14",
  "Private :: Do Not Upload",
]
dependencies = [
  "pyside6==6.11.0",
  "pyyaml==6.0.3",
  "jsonschema==4.26.0",
  "pytest==9.0.3",
]
requires-python = ">= 3.14.3"

[project.optional-dependencies]
tests = [
  "pytest==9.0.3"
]

[project.urls]
Homepage = "https://github.com/mnchapel/packy"
Documentation = "https://github.com/mnchapel/packy"
Repository = "https://github.com/mnchapel/packy"
"Bug Tracker" = "https://github.com/mnchapel/packy/issues"
Changelog = "https://github.com/mnchapel/packy/CHANGELOG.md"

[tool.distutils.build_exe]
includes = ["models", "views", "ui/generated", "utils"]
excludes = ["tkinter", "unittest"]
include_files = ["resources"]

[tool.pyside6-project]
# The list of options can be seen with the command `pyside6-project --help` and on the page <https://doc.qt.io/qtforpython-6/tools/pyside-project.html>
files = [
  # WARNING! This list is auto updated by the just build helper
  "packy/.gitignore",
  "packy/__init__.py",
  "packy/main.py",
  "packy/models/__init__.py",
  "packy/models/files_model.py",
  "packy/models/log.py",
  "packy/models/packer.py",
  "packy/models/packer_data.py",
  "packy/models/packer_factory.py",
  "packy/models/packer_signals.py",
  "packy/models/packer_type_data.py",
  "packy/models/preferences.py",
  "packy/models/progression.py",
  "packy/models/session.py",
  "packy/models/session_decoder.py",
  "packy/models/session_encoder.py",
  "packy/models/task.py",
  "packy/models/warnings.py",
  "packy/models/zip_packer.py",
  "packy/ui/about.ui",
  "packy/ui/fix_warnings.ui",
  "packy/ui/main_window.ui",
  "packy/ui/new_session.ui",
  "packy/ui/options.ui",
  "packy/ui/ui_about.py",
  "packy/ui/ui_fix_warnings.py",
  "packy/ui/ui_main_window.py",
  "packy/ui/ui_new_session.py",
  "packy/ui/ui_options.py",
  "packy/utils/__init__.py",
  "packy/utils/external_data_access.py",
  "packy/utils/settings_access.py",
  "packy/views/__init__.py",
  "packy/views/about.py",
  "packy/views/fix_warnings.py",
  "packy/views/main_window.py",
  "packy/views/options.py",
  "packy/views/tree_view_proxy_model.py",
]

[tool.pyside6-uic]
# The list of options can be seen with the command `pyside6-uic --help-all` and on the page <https://doc.qt.io/qt-6/uic.html>
options = [
  "--from-imports",
]

[tool.pyside6-rcc]
# The list of options can be seen with the command `pyside6-rcc --help-all` and on the page <https://doc.qt.io/qt-6/rcc.html>
options = [
  "--compress-algo",
  "zlib",
]
